[~] Fixed CMS Icon scaling weirdly when collapsing or expanding menu

--- a/stylesheets/components/custom-menu-collapse/_custom-menu-collapse.scss
+++ b/stylesheets/components/custom-menu-collapse/_custom-menu-collapse.scss
@@ -20,10 +20,9 @@
     }
     
     .cms-menu__header {
-        width: 75px !important;
-        min-height: 60px;
+        min-height: unset;
     }
-    
+
     .cms-login-status,
     .text,
     .cms-menu__list li a .text,
